Main UI of the Calculator finished

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,37 @@
                 <button class="ResultButton" >=</button>
             </div>
         </div>
+        <div class="CalculationArea">
+            <div class="Numbers">
+                <div class="FirstRow">
+                    <button>1</button>
+                    <button>2</button>
+                    <button>3</button>
+                </div>
+                <div class="SecondRow">
+                    <button>4</button>
+                    <button>5</button>
+                    <button>6</button>
+                </div>
+                <div class="ThirdRow">
+                    <button>7</button>
+                    <button>8</button>
+                    <button>9</button>
+                    
+                </div>
+                <div class="FourthRow">
+                    <button class="ButtonZero">0</button>
+                </div>
+            </div>
+            <div class="Operators">
+                <button class="OperatorButton">Clear</button>
+                <button class="OperatorButton">+</button>
+                <button class="OperatorButton">-</button>
+                <button class="OperatorButton">x</button>
+                <button class="OperatorButton">/</button>
+            </div>
+            
+        </div>
     </div>
 </body>
 </html>
