Ability to add second number added

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <div class = "ResultBox">
             <div id="ResultText"></div>
             <div>
-                <button class="ResultButton" >=</button>
+                <button class="OperatorButton" >=</button>
             </div>
         </div>
         <div class="CalculationArea">
